--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,27 @@
 
     <build>
         <plugins>
+            <!-- 这个plugin得作用是将依赖的jar包都打入可执行的程序 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -93,19 +114,15 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <!-- com.zenjava/javafx-maven-plugin -->
             <plugin>
-                <groupId>org.openjfx</groupId>
+                <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.7</version>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>net.marioplus.demo.fx.fxdemo/net.marioplus.demo.fx.fxdemo.App</mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
+                <version>8.8.3</version>
+                <configuration>
+                    <vendor>marioplus</vendor>
+                    <mainClass>net.marioplus.demo.fx.fxdemo.App</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
